Added a redis dependency and also implemented serializer to the CartItems class so as to be able to save sessions to the redis database